--- a/servers/package.json
+++ b/servers/package.json
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "@apollo/gateway": "^2.9.3",
+    "@apollo/server": "^4.11.2",
     "@apollo/subgraph": "^2.9.3",
+    "@as-integrations/fastify": "^2.1.1",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/apollo": "^12.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
@@ -29,11 +32,15 @@
     "@nestjs/graphql": "^12.2.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.22.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/ejs": "^3.1.5",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.1",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "graphql": "^16.9.0",
+    "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -52,6 +59,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.22.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
