--- a/clients/user-ui/package.json
+++ b/clients/user-ui/package.json
@@ -13,18 +13,23 @@
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "graphql": "^16.9.0",
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.460.0",
+    "lucide-react": "^0.461.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.4.3",
     "prisma": "^5.22.0",
     "react": "19.0.0-rc-66855b96-20241106",
